--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,35 @@
-.App {
+#search{
+  height: 5vh;
+  width: 10vw;
+  margin-top: 50px;
+}
+#div{
+  height: 50vh;
+  width: 100vw;
+  background-color: dodgerblue;
+  border-radius: 1px solid black;
+}
+
+
+
+#box2{
+  height: 5vh;
+  width: 10vw;
+  margin-top: 30px;
+}
+
+button{
+  background-color: gray;
+  height: 5vh;
+  width: 20vw;
+  border-radius: 0%;
+  font-size: medium;
+  
+}
+table,td{
+  height: 1vh;
+  width: 100vw;
   text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
+  border-radius: 1px solid black;
+  background-color: aqua;
+} 
